<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:text="@string/second_title"
        android:textSize="35sp"
        android:textStyle="italic|bold"
        android:textColor="#39C3BC"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10sp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:id="@id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/food"
            android:fontFamily="cursive"
            android:textColor="#EEF50C"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button

            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add1"
            android:textStyle="bold"
            android:textSize="17sp"
            android:onClick="purchase"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1sp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:id="@id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/food1"
            android:fontFamily="cursive"
            android:textColor="#EEF50C"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button

            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add2"
            android:textStyle="bold"
            android:textSize="17sp"
            android:onClick="purchase"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1sp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:id="@id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/food2"
            android:fontFamily="cursive"
            android:textColor="#EEF50C"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button

            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add3"
            android:textStyle="bold"
            android:textSize="17sp"
            android:onClick="purchase"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="1sp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:id="@id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/food3"
            android:fontFamily="cursive"
            android:textColor="#EEF50C"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button

            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add4"
            android:textStyle="bold"
            android:textSize="17sp"
            android:onClick="purchase"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@id/name"
        android:text="@string/third_title"
        android:layout_marginTop="20sp"
        android:textSize="35sp"
        android:textStyle="italic|bold"
        android:textColor="#39C3BC"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10sp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:id="@id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/drink1"
            android:fontFamily="cursive"
            android:textColor="#44F50C"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button

            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add5"
            android:textStyle="bold"
            android:textSize="17sp"
            android:onClick="purchase"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10sp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:id="@id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/drink2"
            android:fontFamily="cursive"
            android:textColor="#44F50C"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button

            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add6"
            android:textStyle="bold"
            android:textSize="17sp"
            android:onClick="purchase"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10sp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:id="@id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/drink3"
            android:fontFamily="cursive"
            android:textColor="#44F50C"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button

            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add7"
            android:textStyle="bold"
            android:textSize="17sp"
            android:onClick="purchase"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10sp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:id="@id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/drink4"
            android:fontFamily="cursive"
            android:textColor="#44F50C"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button

            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add8"
            android:textStyle="bold"
            android:textSize="17sp"
            android:onClick="purchase"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="12dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/orders"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ord"
            android:textStyle="bold"
            android:onClick="order"
            android:textAlignment="center"
            android:layout_marginLeft="130dp"
            android:layout_gravity="center"
            android:background="#FF0808"/>


    </LinearLayout>
</LinearLayout>